--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Color Switch</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/style.css'>
-    <!-- <script src='main.js'></script> -->
+
 </head>
 <body>
     <h1 id="color-title">Select a Color</h1>
@@ -27,5 +27,6 @@
         <div class="color-choice"></div>
         <div class="color-choice"></div>
     </div>
+        <script src='js/main.js'></script>
 </body>
 </html>
